--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@types/express": "^4.17.15",
     "body-parser": "^1.20.1",
+    "db-migrate": "^0.11.13",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "pg": "^8.8.0",
@@ -22,6 +23,7 @@
   },
   "devDependencies": {
     "@types/jasmine": "^4.3.1",
+    "@types/pg": "^8.6.6",
     "jasmine": "^4.5.0",
     "jasmine-spec-reporter": "^7.0.0",
     "jasmine-ts": "^0.4.0",
