--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@types/express": "^4.17.15",
     "body-parser": "^1.20.1",
+    "cors": "^2.8.5",
     "db-migrate": "^0.11.13",
     "db-migrate-pg": "^1.2.2",
     "dotenv": "^16.0.3",
@@ -24,6 +25,7 @@
     "typescript": "^4.9.4"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/jasmine": "^4.3.1",
     "@types/pg": "^8.6.6",
     "jasmine": "^4.5.0",
